<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="672dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="59dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/Widget.TipTime.TextView"
                android:id="@+id/textView"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:text="@string/Cost_of_service"
                android:textSize="20sp" />


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:ems="10"
                android:hint="@string/Cost_of_service"
                style="Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/costofservice"
                    android:layout_width="151dp"
                    android:layout_height="69dp"

                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:gravity="center"
            style="@style/Widget.TipTime.TextView"
            android:text="How was the service?"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="132dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/amazing"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Amazing! (20%)" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Good"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Good (15%)" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/Okay"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Okay (10%)" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundtip"
            android:layout_width="245dp"
            android:layout_height="45dp"
            android:text="Round up tip?" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Calculate"
            android:layout_width="245dp"
            android:layout_height="66dp"
            android:backgroundTint="#024FA1"
            android:text="Calculate" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/Result"
            android:layout_width="337dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textColor="#024FA1"
            android:textSize="24sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>